--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,82 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GameBargain — Ofertas</title>
+    <title>Examen Final Práctico – GameBargain</title>
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="./output.css">
   </head>
   <body class="bg-gray-50 text-gray-900">
-    <main class="min-h-screen flex items-center justify-center">
-      <section class="max-w-xl w-full p-6">
-        <h1 class="text-2xl font-bold mb-4">GameBargain</h1>
-        <p id="status" class="text-sm text-gray-600">Proyecto mínimo con Tailwind. Pulsa el botón para probar JS.</p>
-        <div class="mt-4">
-          <button id="btn" class="px-4 py-2 bg-blue-600 text-white rounded">Probar</button>
+    <header class="bg-white shadow-sm">
+      <div class="max-w-5xl mx-auto px-4 py-4 flex items-center justify-between">
+        <div>
+          <h1 class="text-xl font-bold">GameBargain</h1>
+          <p class="text-sm text-gray-500">Ofertas de videojuegos — Tienda: PixelBazar</p>
+        </div>
+        <div class="hidden sm:block">
+          <nav class="space-x-4 text-sm text-gray-600">
+            <span>Inicio</span>
+            <span>Acerca</span>
+          </nav>
+        </div>
+      </div>
+    </header>
+
+    <main class="max-w-5xl mx-auto p-4">
+      <section class="bg-white rounded shadow p-4">
+        <div class="flex flex-col sm:flex-row sm:items-center sm:gap-4">
+          <form id="searchForm" class="flex w-full" onsubmit="return false;">
+            <input id="searchInput" class="flex-1 px-3 py-2 border rounded-l focus:outline-none" placeholder="Buscar videojuegos..." />
+            <button id="searchBtn" class="px-4 py-2 bg-blue-600 text-white rounded-r">Buscar</button>
+          </form>
+
+          <div class="mt-3 sm:mt-0 sm:flex sm:items-center sm:ml-auto sm:gap-3">
+            <select id="storeSelect" class="px-3 py-2 border rounded">
+              <option value="1">Steam</option>
+            </select>
+            <select id="sortSelect" class="px-3 py-2 border rounded">
+              <option value="none">Ordenar</option>
+              <option value="sale_asc">Oferta ↑</option>
+              <option value="sale_desc">Oferta ↓</option>
+              <option value="normal_asc">Normal ↑</option>
+              <option value="normal_desc">Normal ↓</option>
+            </select>
+          </div>
+        </div>
+      </section>
+
+      <section class="mt-4">
+        <div id="statusArea" class="text-sm text-gray-600 mb-2">Cargando...</div>
+        <div id="errorArea" class="hidden text-red-600 mb-2"></div>
+
+        <div id="loader" class="hidden mb-4">
+          <div class="w-full h-2 bg-gray-200 rounded overflow-hidden">
+            <div class="h-2 bg-blue-500 animate-pulse" style="width: 30%"></div>
+          </div>
+        </div>
+
+        <div id="gamesGrid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4"></div>
+
+        <div class="mt-4 text-center">
+          <button id="loadMoreBtn" class="px-4 py-2 bg-gray-800 text-white rounded hidden">Ver más</button>
         </div>
       </section>
     </main>
+
+    <!-- Modal -->
+    <div id="detailModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center p-4">
+      <div class="bg-white rounded max-w-xl w-full p-4">
+        <div class="flex justify-between items-start">
+          <h3 id="modalTitleFull" class="text-lg font-bold">Detalle</h3>
+          <button id="modalCloseBtn" class="text-gray-500">Cerrar</button>
+        </div>
+        <div class="mt-3">
+          <img id="modalThumb" src="" alt="thumb" class="w-full h-48 object-contain bg-gray-100" />
+          <p id="modalExtra" class="mt-2 text-sm text-gray-600"></p>
+          <p class="mt-2"><a id="modalDealLink" class="text-blue-600" href="#">Ir a la tienda</a></p>
+        </div>
+      </div>
+    </div>
+
     <script src="./script.js"></script>
   </body>
 </html>
